--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "react-native-screens": "~3.31.1",
-    "react-native-safe-area-context": "4.10.5"
+    "react-native-safe-area-context": "4.10.5",
+    "axios": "^1.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
