--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
+    "expo-camera": "~15.0.0",
+    "expo-barcode-scanner": "~13.0.0",
+    "expo-haptics": "~13.0.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "react-native-screens": "~3.31.1",
     "react-native-safe-area-context": "4.10.5",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.2.1",
     "axios": "^1.6.5"
   },
   "devDependencies": {
